update package.json to have correct repo and information

--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "php-debug",
   "main": "./lib/php-debug",
   "version": "0.0.0",
-  "description": "A short description of your package",
+  "description": "Php debugger for use with the Atom Editor",
   "activationCommands": {
     "atom-workspace": "php-debug:toggle"
   },
-  "repository": "https://github.com/atom/php-debug",
+  "repository": "https://github.com/zolem/php-debug",
   "license": "MIT",
   "engines": {
     "atom": ">=0.174.0 <2.0.0"
